@@ -18,6 +18,7 @@ Version 1.0rc to be released
 - Added support to allow controller classes to be organized in subdirectories (Qiang)
 - Fixed issue #20: CBasePager throws undefined constant error (Qiang)
 - Fixed an issue that affects pager's parameter initialization order (Qiang)
+- Fixed a bug in determining FK relations in MySQL (Qiang)
 
 Version 1.0b October 24, 2008
 -----------------------------
